--- a/TODO.txt
+++ b/TODO.txt
@@ -5,3 +5,8 @@ Continue refactoring Michael's code to fit the eventual abstract framework of th
     - Attempt to figure out if slow audio reading is a fact or a symptom of mistake
     - Utilize logging module for recording messages and debugging
 
+
+Outline of system architecture:
+    Data is input via sources (either streams or static files, both of which can be treated as generators)
+    Sources are fed to feature evaluators, which return weights on what each thinks is important
+    The main level system aggregates weights and selects a stream as the primary data source
