--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,18 @@
 
-Tie sources together (audio + video)
-Output recording and display
-Audio switching feature
+Output recording and display to file
+    First: exit command -> escape key.  Note: adding click event prevented process from exiting.
+    Outputs and inputs by type
+    Need to figure out FPS issue!
 
-Continue refactoring Michael's code to fit the eventual abstract framework of the ensemble system.
-    - Reduce repetitive code
-    - Attempt to figure out if slow audio reading is a fact or a symptom of mistake
-    - Utilize logging module for recording messages and debugging
+Option to override choice of audio
+Calibration of audio (so sensitive mics don't dominate)
+Weighted features.
+
+Independent scheduling? Asynchronous feed input? -> multiprocess with communication?
+
+Adjust config file to have flexible display options
+
+
 
 
 Outline of system architecture:
