--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,12 @@
 
+Short-term goals:
+    - synchronization
+    - ensure system works on laptop
+    - detangle audio-video pairs; just vote for video; will deal with audio later
+    - test operation on videos
+    - medium priority -> split feature calculations into sub-processes
+    - low priority -> input streams in one output window (tiled)
+
 Multiprocessing:
     - run features in independent processes?
     - Setting the interval to a custom rate
@@ -8,7 +16,6 @@ Multiprocessing:
 Option to override choice of audio
 Calibration of audio (so sensitive mics don't dominate)
 Weighted features.
-
 
 
 Outline of system architecture:
