Going to try multiple input queues per process.

--- a/TODO.txt
+++ b/TODO.txt
@@ -5,6 +5,12 @@ Outline of system architecture:
 
 ===================================================================================
 
+Inputs                          Outputs
+Files                           Files
+Live cams                       Life cams
+                                Features
+
+Let receiver decide to drop. Never drop on output.
 
 TODO
     Synchronization
